--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -1,6 +1,6 @@
 .mainDivLogin{
     border:4px solid rgba(84,84,84,0.58);
-    background: rgba(255,183,0,0);
+    background: #e4e4e4;
     border-radius: 10px;
     padding: 10px; position:fixed ;top:30%; left: 10%; right: 10%;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -26,7 +26,6 @@ ul.hr a{
 }
 .error {
     padding: 15px;
-    margin-bottom: 20px;
     border: 1px solid transparent;
     border-radius: 4px;
     color: #a94442;
@@ -36,7 +35,6 @@ ul.hr a{
 
 .msg {
     padding: 15px;
-    margin-bottom: 20px;
     border: 1px solid transparent;
     border-radius: 4px;
     color: #31708f;
