--- a/src/main/webapp/resources/css/client_table.css
+++ b/src/main/webapp/resources/css/client_table.css
@@ -1,6 +1,6 @@
 .responstable {
-    margin: .5em 0;
-
+    /*margin: .5em 0;*/
+margin: 0 auto;
     overflow: hidden;
     background: #FFF;
     color: #024457;
@@ -65,8 +65,8 @@
 @media (min-width: 380px) {
     .responstable th, .responstable td {
         display: table-cell;
-        padding-left: 1.15em;
-        padding-right: 1.15em;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
         padding-bottom: 0.5em;
         padding-top: 0.5em;
         font-size: 14px;
